style.css
/* ... */
.nav-item {
    margin-left: 70px;
}


.nav-link {
    color: #000;
    text-decoration: none;
    font-size: 18px;
    text-transform: uppercase;
    position: relative;
}

.nav-link::before {
    content: "";
    position: absolute;
    bottom: -2px;
    height: 4px;
    width: 90%;
    background: #F79431;
    border-radius: 50px;
    transform: scale(0);
    transition: transform 0.2s linear;
}

.nav-link:hover::before {
    transform: scale(1);
}

.nav-link.active::before {
    transform: scale(1);
}

.navbar-toggler {
    border: none;
}
/* Home page Section
 The Hero Section is the main title of the page, it also describe what we offer on the website.  */
.hero-section {
    position: relative;
    display: grid;
    place-items: center;
}

.hero-image {
    width: 1880px;
    height: 657px;
    top: 40%;
    background: #000;
    transform: translate(1%, 3%);
    opacity: 0.7;
}

.headline {
    position: absolute;
    transform: translate(20%, 20%);
    color: #F79431;
    text-align: left;
    width: 700px;
}

.hook {
    font-size: 72px;
    font-weight: 600;
}

.placeholder {
    font-weight: 200;
    font-size: 24px;
}

/* The product links showcasing all 4 products we sell on the page, 
all the list of the products will be on the product page*/
.product-links {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    gap: 20px;
    justify-items: center;
    margin: 20px 0;
}

.link-style {
    text-decoration: none;
    color: #F79431;
}

.link-style:hover {
    color: #F79431;
}

.card-position {
    transform: translate(4%);
}
.product-link {
    max-width: 500px;
    transition: transform 0.3s;
    color: #F79431;
}

.product-link:hover {
    transform: scale(1.1);
}

/* The section content is all about what we offer on our website, what is it about on our company,
and what's so difference about our website, why you should buy our products */
.section {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    margin-bottom: 20px;
    align-items: center;
}

.section-image img {
    width: 100%;
    height: auto;
    border-radius: 10px;
}

.text-content {
    color: #F79431;
    padding: 10px;
}

.heading-section-1, .heading-section-2 {
    font-size: 2rem;
    font-weight: 500;
    margin-bottom: 10px;
}

.description-section-1, .description-section-2 {
    font-size: 1.2rem;
    font-weight: 200;
}

/* The contact page is the information about the website, this is where they 
can contact the company or the person. */

.phone-icon, .email-icon, .location-icon {
 font-size: 90px;
 color: #000;   
	
}

.contact-section {
    width: 1805px;
    height: 420px;
    transform: translate(-14%, 20%);
    background: rgb(0,0,128);
    background: linear-gradient(90deg, rgba(0,0,128,1) 30%, rgba(2,0,36,1) 77%); 
}

.contact-image img{
    width: 100%;
    height: auto;
    border-radius: 10px;
    width: 340px;
    height: 480px;
    top: 40%;
    left: 40%;
    transform: translate(400%, -5%);
}

.contact-text-content {
    color: #F79431;
    padding: 10px;
    width: 580px;
    height: 98px;
    transform: translate(30%, 80%);
}

.heading-contact{
    font-size: 96px;
    font-weight: 500;
    margin-bottom: 10px;
}

.description-contact {
    font-size: 20px;
    font-weight: 200;
}

/* Description icons for phone, email and location */
.phone-icon {
    font-size: 75px;
}

.email-icon {
    font-size: 75px;
    transform: translate(-10%);
}

.icons {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
    gap: 5px;
    justify-items: left;
}

.icons-text {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
    gap: 5px;
    justify-items: left;
}

.phone-text {
    color: #F79431;
    width: 130px;
    height: 50px;
    transform: translate(-10%);
}

.phone-text-2 {
    color: #F79431;
    width: 130px;
    height: 50px;
    transform: translate(-10%, -50%);
    text-align: center;
}

.email-text {
    color: #F79431;
    width: 130px;
    height: 50px;
    transform: translate(-35%);
}

.email-text-2 {
    color: #F79431;
    width: 130px;
    height: 50px;
    transform: translate(-25%, -50%);
    text-align: center;
}

.location-text {
    color: #F79431;
    width: 130px;
    height: 50px;
    transform: translate(-10%);
}

.location-text-2 {
    color: #F79431;
    width: 130px;
    height: 50px;
    transform: translate(-20%, -50%);
    text-align: center;
}

/* Map text styling and embed map */
.maps {
    top: 40%;
    right: 40%;
    transform: translate(120%, -90%);
}

.map-heading {
    color: #F79431;
    font-size: 40px;
    font-weight: 500;
    width: 233px;
    height: 42px;

}

.map-text {
    color: #F79431;
    font-size: 24px;
    font-weight: 200;
    width: 619px;
    height: 92px;
}
/* Styling the contact info text and heading */
.contact-info-content {
    color: #F79431;
    padding: 10px;
}

.heading-contact-info{
    font-size: 40px;
    font-weight: 500;
    margin-bottom: 10px;
}

.description-contact-info {
    font-size: 24px;
    font-weight: 200;
    width: 580px;
}

/* Contact form */
.contact-container {
    width: 580px;
    height: 631px;
    border-radius: 35px;
    background: rgb(0,0,128);
    background: linear-gradient(90deg, rgba(0,0,128,1) 30%, rgba(2,0,36,1) 92%); 
    padding: 25px;
}

#send-mail, #name {
    width: 530px;
    height: 55px;
    border-radius: 50px;
    border: 1px solid #767693;
    color: #ffff;
    background: rgb(0,0,128);
    background: linear-gradient(90deg, rgba(0,0,128,1) 30%, rgba(2,0,36,1) 92%); 
    padding: 5px;
}

#write-message {
    border-radius: 23px;
    border: 1px solid #767693;
    color: #ffff;
    background: rgb(0,0,128);
    background: linear-gradient(90deg, rgba(0,0,128,1) 30%, rgba(2,0,36,1) 92%); 
    resize: none;
    padding: 10px;
}
/* ... */

